--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,24 @@
 
     <groupId>com.ciphers</groupId>
     <artifactId>END-DEC</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>END-DEC</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.1</junit.version>
     </properties>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>app-snapshots</id>
+            <url>https://nexus.bubliks.net/repository/app-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>app-releases</id>
+            <url>https://nexus.bubliks.net/repository/app-releases/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
@@ -51,6 +62,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
