--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@
                 </configuration>
             </plugin>
 
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -138,4 +140,9 @@
 
         </plugins>
     </build>
+    <scm>
+        <developerConnection>
+            scm:git@github.com:algorithm89/ENCRYPTION-APP.git
+        </developerConnection>
+    </scm>
 </project>
