--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,17 @@
 
     <groupId>com.ciphers</groupId>
     <artifactId>END-DEC</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>END-DEC</name>
+
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.1</junit.version>
     </properties>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>app-snapshots</id>
-            <url>https://nexus.bubliks.net/repository/app-snapshots/</url>
-        </snapshotRepository>
-        <repository>
-            <id>app-releases</id>
-            <url>https://nexus.bubliks.net/repository/app-releases/</url>
-        </repository>
-    </distributionManagement>
+
 
     <dependencies>
         <dependency>
@@ -60,21 +53,9 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-                <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                    <goals>deploy</goals>
-                </configuration>
-            </plugin>
-
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -84,8 +65,6 @@
                     <target>11</target>
                 </configuration>
             </plugin>
-
-
 
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -141,10 +120,5 @@
         </plugins>
     </build>
 
-    <scm>
-        <connection>scm:git:ssh://git@github.com:algorithm89/ENCRYPTION-APP.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:algorithm89/ENCRYPTION-APP.git</developerConnection>
-        <url>http://git@github.com:algorithm89/ENCRYPTION-APP.git/tree/master</url>
-    </scm>
 
 </project>
